force-app/main/default/objects/MUSW__Deposit__c/MUSW__Deposit__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Deposit</label>
    <nameField>
        <label>Deposit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>