force-app/main/default/objects/MUSW__Deposit__c/fields/Deposit_AP__c.field-meta.xml
<CustomField>
    <fullName>Deposit_AP__c</fullName>
    <formula>&quot;Deposit_AP&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit AP</label>
    <type>Text</type>
</CustomField>