force-app/main/default/objects/MUSW__Deposit__c/fields/Deposit_Cash__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Cash__c</fullName>
    <formula>&quot;Deposit_Cash&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Cash</label>
    <type>Text</type>
</CustomField>