force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount__c</fullName>
    <description>The total Amount that needs to be collected.</description>
    <label>Required Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>