force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Bond__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Bond__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bond</label>
    <referenceTo>MUSW__Bond__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>