force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Paid_Amount__c</fullName>
    <description>Total amount that has been collected for this deposit.</description>
    <label>Paid Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>