force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Refunded_Amount__c</fullName>
    <description>Total amount that has been refunded from this deposit.</description>
    <label>Refunded Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>