force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Used_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Used_Amount__c</fullName>
    <description>Total amount of the deposit that has been used to pay fees.</description>
    <label>Used Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>