force-app/main/default/objects/MUSW__Deposit__c/validationRules/MUSW__Cannot_use_more_than_paid_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Cannot_use_more_than_paid_amount</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Used_Amount__c &gt; (MUSW__Paid_Amount__c + MUSW__Transfered_In_Amount__c -  MUSW__Transfered_Out_Amount__c  )</errorConditionFormula>
    <errorDisplayField>MUSW__Used_Amount__c</errorDisplayField>
    <errorMessage>Cannot use more than Paid Amount</errorMessage>
</ValidationRule>