force-app/main/default/objects/MUSW__Deposit__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Account__c</columns>
    <columns>MUSW__Available_Amount__c</columns>
    <columns>MUSW__Paid_Amount__c</columns>
    <columns>MUSW__Used_Amount__c</columns>
    <columns>MUSW__Unpaid_Amount__c</columns>
    <columns>MUSW__Amount__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>